# AOC2023

./: .gitignore  AOC2023.cpp  AOC2023.h  CMakeLists.txt  README.md
day1/: CMakeLists.txt  day1.cpp
day10/: CMakeLists.txt  day10.cpp  out.txt
day11/: CMakeLists.txt  day11.cpp
day12/: CMakeLists.txt  day12.cpp  notes.txt
day13/: CMakeLists.txt  day13.cpp  test.txt
day14/: CMakeLists.txt  day14.cpp
day15/: CMakeLists.txt  day15.cpp
day16/: CMakeLists.txt  day16.cpp
day17/: CMakeLists.txt  day17.cpp
day18/: CMakeLists.txt  day18.cpp
day2/: CMakeLists.txt  day2.cpp
day3/: CMakeLists.txt  day3.cpp
day4/: CMakeLists.txt  day4.cpp
day5/: CMakeLists.txt  day5.cpp
day5CUDA/: CMakeLists.txt  day5CUDA.cpp  kernel.cu  kernel.cuh  mapping.h
day6/: CMakeLists.txt  day6.cpp
day7/: CMakeLists.txt  day7.cpp
day8/: CMakeLists.txt  day8.cpp
day9/: CMakeLists.txt  day9.cpp
